<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="160dp"
    android:layout_height="100dp"
    android:background="?android:selectableItemBackground"
    android:focusable="?android:selectableItemBackground"
    android:elevation="@dimen/elevation_fragment"
    android:clipToPadding="false"
    app:cardCornerRadius="@dimen/margin_base"
    android:layout_margin="@dimen/margin_base">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/ll_item_course">
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/item_course_img"
            android:src="@drawable/devices"
            android:scaleType="fitCenter"
            android:contentDescription="@string/course_description"/>
        
        <TextView
            android:id="@+id/item_course_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_name"
            android:textSize="@dimen/text_14"
            android:textColor="@color/colorButton"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:paddingHorizontal="@dimen/margin_base_x2"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/item_course_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_price"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_12"
            android:textStyle="italic"
            android:paddingHorizontal="@dimen/margin_base_x2"
            android:layout_marginBottom="@dimen/margin_base"/>
            
    </LinearLayout>
    
</androidx.cardview.widget.CardView>