<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:id="@+id/login_background"
    android:background="@drawable/login_screen"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_ctn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <ImageView
            android:id="@+id/uit_logo_text"
            android:layout_width="405dp"
            android:layout_height="225dp"
            android:background="@drawable/uitudemy"
            android:contentDescription="@string/img_logo_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_ctn"
        android:layout_width="match_parent"
        android:layout_height="304dp"
        android:background="@drawable/ctn_login_background"
        android:clipToPadding="false"
        android:padding="@dimen/margin_base_x4"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_name_input"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/login_ctn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_name_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:hint="@string/login_name_hint"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_password_input"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_base"
            android:hint="@string/login_password_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_name_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_password_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:imeOptions="actionGo"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/register_text"
            android:layout_width="380dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:text="@string/register_text"
            android:textColor="@color/colorText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_password_input" />

        <TextView
            android:id="@+id/forgot_password_text"
            android:layout_width="380dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password_text"
            android:textColor="@color/colorText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_text" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_button"
            android:elevation="@dimen/elevation_fragment"
            android:text="@string/login_text"
            android:textColor="@color/colorBtnText"
            android:textSize="@dimen/text_small"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>