<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LearnCourseActivity">

    <TextView
        android:id="@+id/course_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="20dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/colorBtnText"
        android:text="@string/LearnCourses"
        android:textStyle="normal"
        android:background="@color/colorButton"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:progress="0"
        android:progressDrawable="@drawable/circularprogressbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="@id/course_title"/>

    <TextView
        android:id="@+id/progressnumber"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:text="100%"
        android:textColor="@color/colorBtnText"
        android:textSize="8sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/progress_bar"
        app:layout_constraintRight_toRightOf="@id/progress_bar"
        app:layout_constraintLeft_toLeftOf="@id/progress_bar"
        app:layout_constraintBottom_toBottomOf="@id/progress_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/courseVideo_layout"
        app:layout_constraintTop_toBottomOf="@id/course_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <VideoView
            android:id="@+id/coursevideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/lessons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lesson"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingVertical="@dimen/margin_base"
        android:background="@drawable/ctn_white_background_2"
        app:layout_constraintTop_toBottomOf="@id/courseVideo_layout"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lesson_item_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        android:padding="@dimen/margin_base_x2"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/lessons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lesson_item_view">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/documents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Documents"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Comments"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/quiz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Quiz"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/learning_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_base_x2"
        android:scrollbars="vertical"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/tablayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/comment_layout"
        app:layout_constrainedHeight="true"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/comment_layout"
        android:background="@drawable/ctn_white_background_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="@dimen/margin_base_x2">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/comment_box"
            android:textSize="@dimen/text_14"
            android:textColor="@color/black"
            android:hint="@string/write_comment_title"
            android:background="@drawable/comment_box"
            android:padding="@dimen/margin_base_x2"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/comment_sendBtn"
            android:layout_marginEnd="@dimen/margin_base_x2"
            android:inputType="textMultiLine"
            android:autofillHints="" />

        <Button
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:id="@+id/comment_sendBtn"
            android:background="@drawable/login_button"
            android:text="@string/send"
            android:textSize="@dimen/text_12"
            android:textColor="@color/colorBtnText"
            app:layout_constraintTop_toTopOf="@id/comment_box"
            app:layout_constraintBottom_toBottomOf="@id/comment_box"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
