<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen"
    android:padding="@dimen/margin_base_x4"
    android:clipToPadding="false"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity">
    <ImageView
        android:id="@+id/uit_logo_text"
        android:layout_width="405dp"
        android:layout_height="225dp"
        android:background="@drawable/uitudemy"
        android:contentDescription="@string/img_logo_text"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_dock"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_container" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ctn_white_background_2"
        android:paddingHorizontal="@dimen/margin_base_x4"
        android:paddingVertical="@dimen/margin_fragment"
        android:elevation="@dimen/elevation_fragment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset_pass_title"
            android:text="@string/reset_pass_title"
            android:textColor="@color/colorButton"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reset_pass_token_layout"
            app:layout_constraintTop_toBottomOf="@id/reset_pass_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/margin_base_x2">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reset_pass_token_text"
                android:hint="@string/reset_pass_token"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium"
                android:paddingHorizontal="@dimen/margin_base"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reset_pass_new_layout"
            app:layout_constraintTop_toBottomOf="@id/reset_pass_token_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/margin_base">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reset_pass_new_text"
                android:hint="@string/reset_pass_new"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium"
                android:paddingHorizontal="@dimen/margin_base"
                android:inputType="text"
                android:imeOptions="actionGo" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/reset_pass_updateBtn"
            android:text="@string/reset_pass_update"
            android:background="@drawable/login_button"
            android:textColor="@color/colorBtnText"
            android:elevation="@dimen/elevation_fragment"
            app:layout_constraintTop_toBottomOf="@id/reset_pass_new_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/margin_base_x4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>